--- a/BT3/views/home/index.twig
+++ b/BT3/views/home/index.twig
@@ -34,10 +34,10 @@
         {% for article in articles %}
         <div class="col-sm-3">
             <div class="card mb-2" style="width: 100%;">
-                <img src="./assets/images/songs/{{ article.getimage() }}" class="card-img-top" alt="Ảnh bài hát">
+                <img src="./assets/images/songs/{{ article.getImage() }}" class="card-img-top" alt="Ảnh bài hát">
                 <div class="card-body">
                     <h5 class="card-title text-center">
-                        <a href="./articles/{{ article.getid() }}" class="text-decoration-none">{{ article.getTitle() }}</a>
+                        <a href="./articles?id={{ article.getid() }}" class="text-decoration-none">{{ article.getTitle() }}</a>
                     </h5>
                 </div>
             </div>
