--- a/BT3/views/home/index.twig
+++ b/BT3/views/home/index.twig
@@ -37,7 +37,7 @@
                 <img src="./assets/images/songs/{{ article.getImage() }}" class="card-img-top" alt="Ảnh bài hát">
                 <div class="card-body">
                     <h5 class="card-title text-center">
-                        <a href="./articles?id={{ article.getid() }}" class="text-decoration-none">{{ article.getTitle() }}</a>
+                        <a href="./article?id={{ article.getid() }}" class="text-decoration-none">{{ article.getTitle() }}</a>
                     </h5>
                 </div>
             </div>
