--- a/BT3/views/login/login.twig
+++ b/BT3/views/login/login.twig
@@ -2,7 +2,7 @@
 
 <main class="container mt-5 mb-5">
     <form action="auth/login" method="post">
-        <div class="d-flex justify-content-center h-100">
+        <div class="d-flex justify-content-center h-auto">
             <div class="card">
                 <div class="card-header">
                     <h3>Sign In</h3>
