--- a/BT3/views/includes/headerAdmin.twig
+++ b/BT3/views/includes/headerAdmin.twig
@@ -1,8 +1,8 @@
 {% set paths = [
-{'name': 'Trang ngoài', 'path': '../home', 'include': 'homepage'},
+{'name': 'Trang ngoài', 'path': '../home'},
 {'name': 'Thể loại', 'path': 'categories', 'include': 'category'},
 {'name': 'Tác giả', 'path': 'authors', 'include': 'author'},
-{'name': 'Bài viết', 'path': 'articles', 'incldue': 'article'}
+{'name': 'Bài viết', 'path': 'articles', 'include': 'article'}
 ] %}
 <!DOCTYPE html>
 <html lang="en">
