--- a/BT3/views/admin/article/edit_article.twig
+++ b/BT3/views/admin/article/edit_article.twig
@@ -1,72 +1,65 @@
-<?php
-    include_once './views/includes/boostrap.php';
-    include APP_ROOT . '/views/includes/headerAdmin.php';
-?>
+{% include 'includes/headerAdmin.twig' %}
+
 <main class="container mt-5 mb-5">
-    <?php
-        if(isset($_GET['error'])){
-            echo "<script>alert({$_GET['error']})</script>";
-        }
-    ?>
     <div class="row">
         <div class="col-sm">
             <h3 class="text-center text-uppercase fw-bold">Sửa thông tin bài viết</h3>
-            <form action="?controller=article&action=update" method="post" enctype="multipart/form-data">
+            <form action="./article/update" method="post" enctype="multipart/form-data">
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="lblCatId">Mã bài viết</span>
-                    <input type="text" class="form-control" name="ma_bviet" readonly value=<?= $article['ma_bviet'] ?>>
+                    <input type="text" class="form-control" name="ma_bviet" readonly value="{{ article.getId() }}">
                 </div>
 
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="lblCatName">Tên bài viết</span>
-                    <input type="text" class="form-control" name="tieude" value="<?= $article['tieude'] ?>">
+                    <input type="text" class="form-control" name="tieude" value="{{ article.getTitle() }}">
                 </div>
 
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="lblSongName">Tên bài hát</span>
-                    <input type="text" class="form-control" name="ten_bhat" value="<?= $article['ten_bhat'] ?>">
+                    <input type="text" class="form-control" name="ten_bhat" value="{{ article.getSongName() }}">
                 </div>
 
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="lblCategory">Thể loại</span>
                     <select id="categories" class="px-2" name="ma_tloai">
-                        <?php foreach ($categories as $category) { ?>
-                        <option value="<?= $category['ma_tloai'] ?>" <?= $category['ten_tloai'] == $article['ten_tloai'] ? "selected" : "" ?>>
-                            <?= $category['ten_tloai'] ?>
+                        {% for category in categories %}
+                        <option value="{{ category.getId() }}" {{ category.getId() == article.getCategoryId() ?  "selected" : "" }} >
+                            {{ category.getName() }}
                         </option>
-                        <?php } ?>
+                        {% endfor %}
                     </select>
                 </div>
 
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="lblCatName">Tóm tắt</span>
-                    <textarea class="form-control" aria-label="With textarea" name="tomtat"><?= $article['tomtat'] ?></textarea>
+                    <textarea class="form-control" aria-label="With textarea" name="tomtat">{{ article.getBrief() }}</textarea>
                 </div>
 
                 <div class="input-group mt-3 mb-3 flex-nowrap">
                     <span class="input-group-text" id="lblCatName">Nội dung</span>
-                    <textarea id="ckeditor" class="form-control" aria-label="With textarea" name="noidung"><?= $article['noidung'] ?></textarea>
+                    <textarea id="ckeditor" class="form-control" aria-label="With textarea" name="noidung">{{ article.getContent() }}</textarea>
                 </div>
 
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="lblCatName">Tác giả</span>
                     <select id="authors" class="px-2" name="ma_tgia">
-                        <?php foreach ($authors as $author) { ?>
-                        <option value="<?= $author['ma_tgia'] ?>" <?= $author['ten_tgia'] == $article['ten_tgia'] ? "selected" : "" ?>>
-                            <?= $author['ten_tgia'] ?>
+                        {% for author in authors %}
+                        <option value="{{ author.getId() }}" {{ author.getId() == article.getAuthorId() ?  "selected" : "" }} >
+                            {{ author.getName() }}
                         </option>
-                        <?php } ?>
+                        {% endfor %}
                     </select>
                 </div>
 
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="lblCatName">Ngày viết</span>
-                    <input type="date" class="form-control" name="ngayviet" value="<?= date_format(date_create($article['ngayviet']), "Y-m-d") ?>">
+                    <input type="date" class="form-control" name="ngayviet" value="{{ article_date }}">
                 </div>
 
                 <div class="input-group mt-3 mb-3 align-items-center flex-nowrap">
                     <span class="input-group-text" id="lblCatName">Hình ảnh</span>
-                    <div class="song-img px-5"><img src="./assets/images/songs/<?= $article['hinhanh'] ?>" alt="Image"></div>
+                    <div class="song-img px-5"><img src="../assets/images/songs/{{ article.getImage() }}" alt="Image"></div>
                 </div>
 
                 <div class="input-group mt-3 mb-3">
@@ -76,12 +69,11 @@
 
                 <div class="form-group  float-end ">
                     <input type="submit" name="submit" value="Lưu lại" class="btn btn-success">
-                    <a href="article.php" class="btn btn-warning ">Quay lại</a>
+                    <a href="./articles" class="btn btn-warning ">Quay lại</a>
                 </div>
             </form>
         </div>
     </div>
 </main>
-<?php
-    include APP_ROOT . '/views/includes/footer.php';
-?>
+
+{% include 'includes/footer.twig' %}
